--- a/viewall.html
+++ b/viewall.html
@@ -32,7 +32,7 @@
                 <table class="table">
                     <thead>
                       <tr>
-                        <th scope="col">Bus Number</th>
+                        <th scope="col">Serial NO</th>
                         <th scope="col">Bus ID</th>
                         <th scope="col">Route</th>
                         <th scope="col">Driver Name</th>
@@ -45,70 +45,70 @@
                         <td>5675</td>
                         <td>tm jn</td>
                         <td>mark</td>
-                        <td>0987667787</td>
+                        <td>09876</td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
                         <td>08909</td>
                         <td>abc jn</td>
-                        <td>xxxxxx</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>das</td>
+                        <td>876587</td>
                       </tr>
                       <tr>
                         <th scope="row">3</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>7687</td>
+                        <td>jy jn</td>
+                        <td>gse</td>
+                        <td>87687</td>
                       </tr>
                       <tr>
                         <th scope="row">4</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>98765</td>
+                        <td>hgh jn</td>
+                        <td>biju</td>
+                        <td>876887</td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>877654</td>
+                        <td>jh jn</td>
+                        <td>max</td>
+                        <td>09887</td>
                       </tr>
                       <tr>
                         <th scope="row">6</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>56487</td>
+                        <td>yti jn</td>
+                        <td>tye</td>
+                        <td>096587</td>
                       </tr>
                       <tr>
                         <th scope="row">7</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>54756</td>
+                        <td>hghg</td>
+                        <td>rui</td>
+                        <td>9778</td>
                       </tr>
                       <tr>
                         <th scope="row">8</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>7856</td>
+                        <td>ha</td>
+                        <td>kumar</td>
+                        <td>67567</td>
                       </tr>
                       <tr>
                         <th scope="row">9</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>1254</td>
+                        <td>hdd jn</td>
+                        <td>yath</td>
+                        <td>87567</td>
                       </tr>
                       <tr>
                         <th scope="row">10</th>
-                        <td>xxxxxxxxx87x</td>
-                        <td>xxxxxxxxxxxxxxx jn</td>
-                        <td>mxxk</td>
-                        <td>xxxxxxxxx87</td>
+                        <td>5775</td>
+                        <td>ghhg jn</td>
+                        <td>gyat</td>
+                        <td>98787</td>
                       </tr>
                     </tbody>
                   </table>
